--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.15.4",
+    "@heroicons/react": "^1.0.6",
     "meteor-node-stubs": "^1.2.1",
+    "postcss-load-config": "^3.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -19,5 +21,10 @@
       "server": "server/main.js"
     },
     "testModule": "tests/main.js"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   }
 }
